Publish revamp (Part 2)  (#1781)
* Move menu entries & add publish buttons

* Save

* Separate publish forms

* Make new header dynamic for all screen sizes

* Save some livestream creation changes

* Save more livestream changes

* Save

* Change publish folder structure

* Update paths

* Change position of form elements. Again.

* Move, add & delete form fields

* Clean post form

* Clean post form even more

* Clean publish post component

* Save

* Add custom post form state

* Move price to additional options

* Adjust livestream form

* Adjust headers & titles

* Update key section

* Adjust active header icons

* Adjust toggle menu

* Save

* Adjust active button style

* Change active button selector in header

* Fix header menu links

* Move price section in post form

* Adjust instruction text color

* Adjust replay table

* Revert changes & adjust tag section

* Make more form elements dynamic

* Finalize additional options section

* Update post form

* Set mode in upload form

* Update livestream form

* Add clear button

* Make clear button dynamic

* Set upload mode

* Remove new button

* Clean upload form

* Show disabled key on livestream form

* Remove old key section

* Update channel selector for publish forms

* Add updated channel selector to publish forms

* Add mobile links

* Update mobile header

* Adjust channel selector on mobile

* Adjust livestream form on mobile

* Adjust edit links for livestreams

* Adjust edit links for posts

* Adjust more edit links

* Adjust channel selector

* Update disabled in livestream form

* Add missing change

* Fix sign out function

* Save

* Adjust livestream page on mobile

* Adjust tags section on upload page on mobile

* Adjust publish links in left navigation on mobile

* Add images to accepted filetypes on upload page

* Add autofocus to input fields

* Add autofocus to all p

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -627,6 +627,7 @@ $actions-z-index: 2;
   }
 
   .ff-container {
+    margin-right: var(--spacing-xs) !important;
     canvas {
       border-radius: 50%;
     }
@@ -673,6 +674,7 @@ $actions-z-index: 2;
   }
 
   .ff-container {
+    margin-right: var(--spacing-xs) !important;
     canvas {
       border-radius: 50%;
     }
@@ -682,6 +684,124 @@ $actions-z-index: 2;
       border-radius: 50%;
     }
   }
+}
+
+.channel__selector--publish {
+  display: inline-block;
+  margin-bottom: 0;
+  margin-top: -2px;
+  width: unset !important;
+
+  .channel-thumbnail {
+    width: 1.4rem;
+    height: 1.4rem;
+    .channel-thumbnail__custom {
+      width: 1.4rem;
+      height: 1.4rem;
+    }
+  }
+  .ff-container {
+    margin-right: var(--spacing-xs) !important;
+    canvas {
+      width: 1.4rem !important;
+      height: 1.4rem !important;
+      border-radius: 50%;
+    }
+    .freezeframe-img {
+      width: 1.4rem !important;
+      height: 1.4rem !important;
+      border-radius: 50%;
+    }
+  }
+
+  .claim-preview__title {
+    margin-right: var(--spacing-xs);
+  }
+  .comment__badge {
+    svg {
+      width: 1.4rem;
+      height: 1.4rem;
+      margin-bottom: -2px;
+    }
+  }
+
+  .channel__list-item {
+    height: var(--height-button);
+    border-radius: 0 var(--border-radius) var(--border-radius) 0;
+  }
+
+  .icon--ChevronDown {
+    margin-left: var(--spacing-s);
+  }
+
+  @media (max-width: $breakpoint-small) {
+    margin-top: -2px !important;
+    margin-bottom: 0 !important;
+    width: unset !important;
+    button {
+      padding: 0 !important;
+    }
+  }
+}
+
+.channel__list--publish {
+  .channel__list-item {
+    height: var(--height-button);
+    .channel-thumbnail {
+      width: 1.4rem;
+      height: 1.4rem;
+      .channel-thumbnail__custom {
+        width: 1.4rem;
+        height: 1.4rem;
+      }
+    }
+    .ff-container {
+      margin-right: var(--spacing-xs) !important;
+      canvas {
+        width: 1.4rem !important;
+        height: 1.4rem !important;
+        border-radius: 50%;
+      }
+      .freezeframe-img {
+        width: 1.4rem !important;
+        height: 1.4rem !important;
+        border-radius: 50%;
+      }
+    }
+    .claim-preview__title {
+      margin-right: var(--spacing-xs);
+    }
+    .comment__badge {
+      svg {
+        width: 1.4rem;
+        height: 1.4rem;
+        margin-bottom: -2px;
+      }
+    }
+
+    .icon__wrapper {
+      width: 1.4rem;
+      height: 1.4rem;
+      margin-right: var(--spacing-xs);
+    }
+  }
+}
+
+.channel__selector--tabHeader {
+  @extend .channel__selector--publish;
+  float: right;
+  margin-left: var(--spacing-xxs);
+  margin-top: 0 !important;
+
+  .channel__list-item {
+    border-radius: var(--border-radius);
+    display: flex !important;
+    align-items: center;
+  }
+}
+
+.channel__list--tabHeader {
+  @extend .channel__list--publish;
 }
 
 .channel-staked__wrapper {
