Fix action button margin in modal on mobile

--- a/ui/scss/component/_modal.scss
+++ b/ui/scss/component/_modal.scss
@@ -126,6 +126,7 @@
           .button__content {
             .button__label {
               margin-left: var(--spacing-s);
+              margin-right: var(--spacing-s);
               font-size: var(--font-small);
             }
           }
