active editor-toolbar class modified

--- a/ui/scss/component/_markdown-editor.scss
+++ b/ui/scss/component/_markdown-editor.scss
@@ -120,9 +120,9 @@
         color: var(--color-header-link);
         background-color: var(--color-border);
       }
-      /* &:active {
-        background-color: var(--color-border);
-      } */
+    }
+    button.active {
+      background: var(--color-border);
     }
   }
 }
