--- a/ui/scss/init/_base-theme.scss
+++ b/ui/scss/init/_base-theme.scss
@@ -170,6 +170,8 @@
   --color-editor-url: var(--color-editor-string);
   --color-editor-hr: var(--color-editor-tag);
   --color-editor-hr-preview: #cccccc;
+  --color-editor-button-hover-bg: #333338;
+  --color-editor-button-active-bg: #333338;
 
   // Other
   --color-focus: #bfdbfe;
