--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -186,6 +186,8 @@
   --color-editor-url: var(--color-editor-string);
   --color-editor-hr: var(--color-editor-tag);
   --color-editor-hr-preview: #a0a0a0;
+  --color-editor-button-hover-bg: #333338;
+  --color-editor-button-active-bg: #333338;
 
   // Ads
   --color-ads-background: #475057;
