Adjust badge size

--- a/ui/scss/component/_header.scss
+++ b/ui/scss/component/_header.scss
@@ -54,8 +54,8 @@
       }
     }
 
-    .channel-thumbnail--badgeBorder {
-      border-bottom: 1px solid #c35321;
+    .channel-thumbnail {
+      // border-bottom: 1px solid #c35321;
       .comment__badge {
         left: 20%;
         .icon {
