Disable chat auto-open on mobile

--- a/ui/scss/component/_livestream-chat.scss
+++ b/ui/scss/component/_livestream-chat.scss
@@ -656,6 +656,7 @@ $recent-msg-button__height: 2rem;
   background-color: transparent;
   padding: 0px !important;
   margin-top: 0 !important;
+  padding-bottom: var(--spacing-xxs) !important;
   left: 0 !important;
   right: 0 !important;
   border-right: unset;
