--color-editor-button-hover-bg and --color-editor-button-active-bg color corrected in light

--- a/ui/scss/component/_markdown-editor.scss
+++ b/ui/scss/component/_markdown-editor.scss
@@ -95,7 +95,7 @@
   }
 
   .cm-s-easymde .cm-link {
-    color: var(--color-border);
+    color: var(--color-editor-link);
   }
 
   .cm-s-easymde .cm-url {
