--- a/ui/scss/themes/light.scss
+++ b/ui/scss/themes/light.scss
@@ -171,8 +171,8 @@
   --color-editor-url: var(--color-editor-string);
   --color-editor-hr: var(--color-editor-tag);
   --color-editor-hr-preview: #cccccc;
-  --color-editor-button-hover-bg: #333338;
-  --color-editor-button-active-bg: #333338;
+  --color-editor-button-hover-bg: #e5e7eb;
+  --color-editor-button-active-bg: #e5e7eb;
 
   // Ads
   --color-ads-background: #fae5ff;
