Swap comment servers without going to settings page
work in progress

added input to select custom and default server when creating comment

the problem of synchronizing the two commentServer of the application was solved

btn moved to the correct component and syncs correctly

Fixed why it didn't show comments

Aligned input

size and location of the refresh btn changed, and added maximum and minimum width for the comment server

margin removed

change using overflow

refresh

--- a/ui/scss/init/_vars.scss
+++ b/ui/scss/init/_vars.scss
@@ -62,6 +62,9 @@ $spacing-width: 36px;
   --floating-viewer-container-height: calc(var(--floating-viewer-height) + var(--floating-viewer-info-height));
   --option-select-width: 8rem;
 
+  --input-select-server-min-width: 100px;
+  --input-select-server-max-width: 250px;
+
   // Text
   --text-max-width: 660px;
   --text-link-padding: 4px;
