--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -274,6 +274,21 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+
+  .select--slim {
+    display: flex;
+    margin-left: var(--spacing-s);
+    margin-bottom: var(--spacing-s);
+
+    @media (min-width: $breakpoint-small) {
+      max-width: none;
+
+      select {
+        padding: 0 var(--spacing-xs);
+        padding-right: var(--spacing-l);
+      }
+    }
+  }
 }
 
 .card--enable-overflow {
@@ -318,6 +333,7 @@
   align-self: flex-start;
   .button--alt {
     padding-top: 2px;
+    padding: 0 var(--spacing-s);
   }
   .comment__sort {
     .button--alt {
@@ -641,4 +657,26 @@
       right: 0;
     }
   }
+}
+
+.button_selectedServer {
+  display: inline;
+  float: right;
+  select {
+    width: 12rem;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+  @media (max-width: $breakpoint-small) {
+    select {
+      width: 8rem;
+    }
+  }
+}
+
+.button_refresh {
+  display: inline;
+  float: right;
+  margin-left: var(--spacing-s);
 }
